# EasyKafka

./: .gitignore  README.md  convert-ts-to-js.js  index.html  jsconfig.json  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
.trae/rules/: project_rules.md
src/: App.vue  main.js  main.ts
src-tauri/: .taurignore  Cargo.toml  develop_plan.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: config.toml  data.db  topicConfigTemplate.json
src-tauri/src/: config.rs  kafka_error.rs  lib.rs  main.rs
src-tauri/src/entity/: mod.rs
src-tauri/src/entity/db_entity/: cluster.rs  connect_properties.rs  kafka_connect.rs  mod.rs  prelude.rs  topics.rs
src-tauri/src/entity/response/: cluster.rs  common.rs  dashboard.rs  mod.rs
src-tauri/src/handles/: cluster_handles.rs  clusters.rs  dashboard.rs  dashboard_handles.rs  mod.rs  topic_handles.rs
src-tauri/src/infra/: kafka_infra.rs  mod.rs  sql_infra.rs
src-tauri/src/utils/: token.rs
src/api/: index.ts
src/components/: Header.vue  Sidebar.vue
src/config/: dev.ts  index.js  index.ts  prod.ts
src/mock/: api.ts  index.ts
src/router/: index.js  index.ts
src/stores/: cluster.js  cluster.ts  consumerGroup.js  consumerGroup.ts  log.js  log.ts  message.js  message.ts  metrics.js  metrics.ts  settings.js  settings.ts  theme.js  theme.ts  topic.js  topic.ts
src/utils/: chart.ts  http.ts  index.ts  kafka.ts  validation.ts
原型/: cluster-management.html  consumer-group.html  consumer.html  index.html  logs.html  producer.html  settings.html  topic-management.html
(+11 files in other folders)
