[package]
name = "easy-kafka"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "easy_kafka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = "0.38.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
once_cell = "1.21.3"
jsonwebtoken = "9.3.1"

schemars = "1.0.4"
rmcp = "0.7.0"

